--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -246,7 +246,7 @@ p {
    &__beans {
       position: absolute;
       bottom: 14.7%;
-      left: 1.2%;
+      left: 0;
       width: 11.8rem;
    }
 
