--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -176,8 +176,22 @@ p {
 
    &__img {
       width: 92%;
-      box-shadow: 29px 52px 121px -76px rgba($green, .8);
       border-radius: 100%;
+      animation: shadow 3s linear infinite;
+   }
+
+   @keyframes shadow {
+      0% {
+         box-shadow: 0 0 0 0 rgba($green, .8);
+      }
+
+      50% {
+         box-shadow: 29px 52px 121px -76px rgba($green, .8);
+      }
+
+      100% {
+         box-shadow: 0 0 0 0 rgba($green, .8);
+      }
    }
 
    &__text {
@@ -582,7 +596,7 @@ p {
    }
 
    &__minus {
-      pointer-events: none;
+      // pointer-events: none;
       background: url(../images/minus.svg) no-repeat center / contain;
       opacity: .4;
 
@@ -592,7 +606,7 @@ p {
    }
 
    &__plus {
-      pointer-events: none;
+      // pointer-events: none;
       background: url(../images/plus.svg) no-repeat center / contain;
 
       &_min {
@@ -654,6 +668,23 @@ p {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      animation: transform 5s linear infinite;
+
+
+      @keyframes transform {
+         0% {
+            transform: scale(1);
+         }
+
+         50% {
+            transform: scale(1.2);
+         }
+
+         100% {
+            transform: scale(1);
+         }
+
+      }
 
       &::before {
          content: '';
@@ -848,6 +879,8 @@ p {
          color: $orange;
       }
 
+
+
       &:nth-child(2) {
          margin-top: 2.9rem;
       }
@@ -891,6 +924,7 @@ p {
       opacity: .4;
       transition: .3s;
       transform: scale(1);
+      cursor: pointer;
 
       &:hover {
          opacity: 1;
