--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -177,21 +177,31 @@ p {
    &__img {
       width: 92%;
       border-radius: 100%;
-      animation: shadow 3s linear infinite;
+      box-shadow: 29px 52px 121px -76px rgba($green, .8);
+      animation: shadow 15s linear infinite;
    }
 
    @keyframes shadow {
       0% {
-         box-shadow: 0 0 0 0 rgba($green, .8);
-      }
+         transform: rotate(0deg);
 
-      50% {
-         box-shadow: 29px 52px 121px -76px rgba($green, .8);
       }
 
       100% {
-         box-shadow: 0 0 0 0 rgba($green, .8);
+         transform: rotate(360deg);
       }
+
+      // 0% {
+      //    box-shadow: 0 0 0 0 rgba($green, .8);
+      // }
+
+      // 50% {
+      //    box-shadow: 29px 52px 121px -76px rgba($green, .8);
+      // }
+
+      // 100% {
+      //    box-shadow: 0 0 0 0 rgba($green, .8);
+      // }
    }
 
    &__text {
